# sales-call-review-app

./: README.md  docker-compose.yml
backend/: Dockerfile  config.py  main.py  models.py  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/sales-call-review-frontend/: package-lock.json
frontend/sales-call-review-frontend/src/: CallList.js
frontend/src/: App.js  CallDetail.js  CallList.js
