[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["abdul <abdul.emad0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
anthropic = "^0.42.0"
black = "^24.10.0"
pydantic = "^2.10.5"
uvicorn = "^0.34.0"
mypy = "^1.14.1"
ruff = "^0.9.1"
pydantic-settings = "^2.7.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
